[Fix text overflow and bottom positioning]

--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ a {
     --background-main-color: rgb(248, 248, 248);
     --font-main-color: rgb(39, 39, 39);
 
-    --background-title-bottom-color: grey;
-    --font-title-bottom-color: black;
+    --background-title-bottom-color: rgb(187, 187, 187);
+    --font-title-bottom-color: rgb(39, 39, 39);
 
     --border-card: 1px dotted black;
 }
@@ -34,7 +34,6 @@ a {
     align-items: center;
     position: relative;
     width: 100vw;
-    height: 225vh;
     background: var(--background-main-color);
     color: var(--font-main-color);
     font-family: 'Roboto', sans-serif;
@@ -68,9 +67,8 @@ a {
 .Main.Content .Text.Culinary.Story {
     display: grid;
     width: 90%;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: 200px 200px 220px 150px;
     gap: 10px;
+    grid-template-rows: repeat(4, auto);
     grid-template-areas: 
     "Paragraph-one Paragraph-one" 
     "Paragraph-two Image-container"
@@ -84,7 +82,6 @@ a {
     align-items: center;
     text-align: center;
     font-size: 1.3rem;
-    text-align: center;
     margin-top: 60px;
 }
 
@@ -108,17 +105,30 @@ a {
     grid-area: Paragraph-four;
     display: grid;
     align-items: center;
-    margin-top: 50px;
     text-align: center;
     font-size: 1rem;
-    border: 2px dotted white;
+    border: var(--border-card);
     border-radius: 20px;
+    padding: 10px;
+    margin-top: 20px;
 }
 
 .Main.Content .Text.Culinary.Story .Image.Container {
     grid-area: Image-container;
     overflow: hidden;
+    object-fit: cover;
+    min-width: 40px;
+    border: 1px solid black;
+    border-radius: 25px;
 }
+
+@media (max-width: 1200px) {
+    .Image.Container  {
+        display: none; 
+        border: none;
+    }
+}
+
 
 .Main.Content .Text.Culinary.Story .Image.Container img {
     width: 100%;
@@ -130,37 +140,26 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    width: 100%;
-    height: 400px;
+    width: 90%;
+    padding: 20px;
 }
 
 .Main.Content .Text.Culinary.Plates .Second.Title {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.2rem;
-    height: 120px;
+    font-size: 1.2rem; 
+    padding: 20px;
 }
 
 .Main.Content .Text.Culinary.Plates .Paragraph.Five {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 1.2rem;
-    width: 1300px 
 }
 
 .Main.Content .Text.Culinary.Plates .Paragraph.Six {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-    padding: 20px;
-    margin: 25px;
+    padding: 30px;
     font-size: 1.2rem;
-    border: 2px dotted white;
-    border-radius: 25px;
+    border-radius: 25px; 
 }
 
 .Main.Content .Plates.Container {
@@ -169,6 +168,7 @@ a {
     justify-content: center;
     width: 100%;
     gap: 50px;
+    margin-bottom: 80px;
     grid-template-columns: repeat(5, 310px);
     grid-template-rows: 500px;
 }
@@ -212,20 +212,16 @@ a {
 
 .Main.Content .Bottom.Content {
     display: flex;
-    align-items: center;
     justify-content: center;
-    position: absolute;
-    bottom: 0px;
+    align-items: center;
+    padding: 5px;
+    background-color: var(--background-title-bottom-color);
     width: 100%;
-    height: 45px;
-    background: var(--background-title-bottom-color);
-    color: var(--font-title-bottom-color)
+    height: 50px;
 }
 
-.Main.Content .Bottom.Content img{
-    display: flex;
-    align-self: center;
-    width: 45px;
-    height: 45px;
-    padding: 5px;
+.Main.Content .Bottom.Content img {
+    border-radius: 25px;
+    max-width: 35px;
+    height: auto;
 }
